--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,37 +9,45 @@
     <!-- stylesheet -->
     <link rel="stylesheet" href="styles/style.css">
 </head>
+
 <body>
-    <h1>Leader Board</h1>
-    <section>
-        <div class="top-players">
-            <div class="players">
-                <div class="player">
-                    <img src="images/players/player-1.png" alt="">
-                    <h3>Top Player-1</h3>
-                </div>
-                <div class="player">
-                    <img src="images/players/player-2.png" alt="">
-                    <h3>Top Player-2</h3>
-                </div>
-                <div class="player">
-                    <img src="images/players/player-3.png" alt="">
-                    <h3>Top Player-3</h3>
-                </div>
-                <div class="player">
-                    <img src="images/players/player-4.png" alt="">
-                    <h3>Top Player-4</h3>
-                </div>
-                <div class="player">
-                    <img src="images/players/player-5.png" alt="">
-                    <h3>Top Player-5</h3>
-                </div>
-                <div class="player">
-                    <img src="images/players/player-6.png" alt="">
-                    <h3>Top Player-6</h3>
+    <header></header>
+    <main>
+        <!-- top-players and top-blog -->
+        <section class="container">
+            <h3 class="section-title">Top Players</h3>
+            <div class="top-players">
+                <div class="players">
+                    <div class="player">
+                        <img src="images/players/player-1.png" alt="">
+                        <h3 class="player-name">Top Player-1</h3>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-2.png" alt="">
+                        <h3 class="player-name">Top Player-2</h3>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-3.png" alt="">
+                        <h3 class="player-name">Top Player-3</h3>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-4.png" alt="">
+                        <h3 class="player-name">Top Player-4</h3>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-5.png" alt="">
+                        <h3 class="player-name">Top Player-5</h3>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-6.png" alt="">
+                        <h3 class="player-name">Top Player-6</h3>
+                    </div>
                 </div>
             </div>
-        </div>
-    </section>
+            <hr>
+        </section>
+    </main>
+
 </body>
+
 </html>
