--- a/index.html
+++ b/index.html
@@ -45,6 +45,45 @@
                 </div>
             </div>
             <hr>
+            <h3 class="section-title">Top Blog</h3>
+            <div class="blogs">
+                <article class="blog">
+                    <div class="thumbnail">
+                        <img src="images/blogs/blog-1.png" alt="">
+                    </div>
+                    <div class="blog-info">
+                        <h4 class="blog-title">13 of My Favorite UI/UX Goodies</h4>
+                        <p class="blog-author">By <a href="">Danny Sapi</a></p>
+                    </div>
+                </article>
+                <article class="blog">
+                    <div class="thumbnail">
+                        <img src="images/blogs/blog-2.png" alt="">
+                    </div>
+                    <div class="blog-info">
+                        <h4 class="blog-title">13 of My Favorite UI/UX Goodies</h4>
+                        <p class="blog-author">By <a href="">Danny Sapi</a></p>
+                    </div>
+                </article>
+                <article class="blog">
+                    <div class="thumbnail">
+                        <img src="images/blogs/blog-3.png" alt="">
+                    </div>
+                    <div class="blog-info">
+                        <h4 class="blog-title">13 of My Favorite UI/UX Goodies</h4>
+                        <p class="blog-author">By <a href="">Danny Sapi</a></p>
+                    </div>
+                </article>
+                <article class="blog">
+                    <div class="thumbnail">
+                        <img src="images/blogs/blog-4.png" alt="">
+                    </div>
+                    <div class="blog-info">
+                        <h4 class="blog-title">13 of My Favorite UI/UX Goodies</h4>
+                        <p class="blog-author">By <a href="">Danny Sapi</a></p>
+                    </div>
+                </article>
+            </div>
         </section>
     </main>
 
