--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Leader Board</title>
+    <!-- Font Awesome -->
+    <script src="https://kit.fontawesome.com/9d1654366f.js" crossorigin="anonymous"></script>
     <!-- stylesheet -->
     <link rel="stylesheet" href="styles/style.css">
 </head>
@@ -85,8 +87,37 @@
                 </article>
             </div>
         </section>
+        <!-- Latest Course -->
+        <section class="container">
+            <h3 class="section-title">Latest Course</h3>
+            <div class="courses">
+                <div class="course">
+                    <div class="course-banner">
+                        <img src="images/courses/course-1.png" alt="">
+                    </div>
+                    <div class="course-detail">
+                        <h3 class="course-title">React - The Complete Guideline 2020</h3>
+                        <p class="course-author">Reed Krakoff.</p>
+                        <div class="course-info">
+                            <div>
+                                <i class="fa-solid fa-star filled"></i>
+                                <i class="fa-solid fa-star filled"></i>
+                                <i class="fa-solid fa-star filled"></i>
+                                <i class="fa-solid fa-star filled"></i>
+                                <i class="fa-solid fa-star empty"></i>
+                            </div>
+                            <p>4.5</p>
+                            <div class="course-duration">
+                                <i class="fa-solid fa-clock"></i>
+                                01.30hr
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
-
+    
 </body>
 
 </html>
